manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust-service
spec:
  selector:
    app: locust
  ports:
    - protocol: TCP
      port: 80 #8089
      targetPort: 8089
  type: ClusterIP #NodePort #
